# MapReduce_with_gRPC

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  client.cc  cmake_install.cmake  server.cc  tool.sh
coordinator/: coordinator.cc  coordinator.h
proto_src/: hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h  hello.proto  tool.sh
user_implement/: user_implement.h
worker/: worker.cc  worker.h
